--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
   min-height: 100%;
   user-select: none;
 }
+
 :root {
   --borda-escura: 1vh rgb(0, 0, 0) solid;
   --borda-redondinha: 2vh;
@@ -24,7 +25,7 @@ body {
   background-position: bottom;
 }
 
-#shop-background {
+.taverna {
   background-image: url("img/background-loja.jpg");
   background-size: cover;
   background-repeat: no-repeat;
@@ -41,6 +42,7 @@ body {
 .background-deck {
   background-color: rgb(44, 44, 44);
 }
+
 #background-sobre-nos {
   background-image: url("img/background-sobre-nos.jpg");
   background-size: cover;
@@ -230,6 +232,7 @@ a {
   display: grid;
   grid-template: auto auto auto auto auto / 20vh 1fr 1fr 1fr 1fr 20vh;
 }
+
 #nome-oponente {
   text-align: center;
   font-size: 5vh;
@@ -239,6 +242,7 @@ a {
   grid-row: 4 / 5;
   grid-column: 3 / 5;
 }
+
 .texto {
   text-align: center;
   font-size: 6vh;
@@ -246,16 +250,19 @@ a {
   text-shadow: 3px 3px rgb(104, 182, 255);
   color: rgb(255, 255, 255);
 }
+
 #botao-voltar {
   grid-row: 1 / 2;
   grid-column: 1 / 2;
 }
+
 #selecionador h1 {
   grid-row: 1 / 2;
   grid-column: 3 / 5;
   justify-self: center;
   align-self: center;
 }
+
 #anterior {
   background-image: url("img/anterior.png");
   background-size: cover;
@@ -287,6 +294,7 @@ a {
 #proximo:active {
   border: rgb(146, 146, 146) ridge 5px;
   transition: 300ms;
+  transform: translateX(10px);
 }
 
 #anterior:hover {
@@ -298,21 +306,26 @@ a {
 #anterior:active {
   border: rgb(146, 146, 146) ridge 5px;
   transition: 300ms;
+  transform: translateX(10px);
 }
+
 .controle {
   width: 15vh;
   height: 15vh;
 }
+
 #img-oponente {
   width: 32.66vh;
   height: 45.66vh;
   border: rgb(146, 146, 146) ridge 2vh;
   border-radius: 2vh;
 }
+
 #img-oponente:hover {
   border: rgb(116, 4, 4) ridge 2vh;
   transition: 300ms;
 }
+
 #link-oponente {
   grid-row: 2 / 3;
   grid-column: 3 / 5;
@@ -383,15 +396,29 @@ a {
 .adicionar-baralho {
   opacity: 10%;
 }
+
 .alerta-len {
   background-color: rgb(228, 39, 5);
   border: solid black 1vh;
   border-radius: 10%;
+  display: grid;
+  grid-area: 1 / 5 / 2 / 6;
   position: sticky;
   top: 0;
-  left: 0;
-  display: inline;
+  right: 0;
 }
+
+.alerta-max {
+  background-color: rgb(54, 204, 17);
+  border: solid black 1vh;
+  border-radius: 10%;
+  display: grid;
+  grid-area: 1 / 5 / 2 / 6;
+  position: sticky;
+  top: 0;
+  right: 0;
+}
+
 .alerta-len p {
   text-align: center;
   font-size: 4vh;
@@ -399,21 +426,13 @@ a {
   font-family: "Dancing Script", cursive;
 }
 
-.alerta-max {
-  background-color: rgb(54, 204, 17);
-  border: solid black 1vh;
-  border-radius: 10%;
-  position: sticky;
-  top: 0;
-  left: 0;
-  display: inline;
-}
 .alerta-max p {
   text-align: center;
   font-size: 4vh;
   font-weight: 700;
   font-family: "Dancing Script", cursive;
 }
+
 /* fim */
 
 /* estilos para as batalhas */
@@ -421,6 +440,7 @@ a {
 .batalha {
   overflow: hidden;
 }
+
 #arena {
   display: grid;
   grid-template: repeat(4, auto) / repeat(5, 1fr);
@@ -429,12 +449,14 @@ a {
   align-items: center;
   grid-gap: 1vh;
 }
+
 #batalha-voltar {
   grid-column: 5 / 6;
   grid-row: 1 / 2;
   justify-self: center;
   align-self: center;
 }
+
 #batalha-voltar div {
   display: flex;
   font-size: 4vh;
@@ -450,6 +472,7 @@ a {
   width: 11vh;
   border: 1vh solid rgb(0, 0, 0);
 }
+
 #baralho-area {
   grid-column: 5 / 6;
   grid-row: 4 / 5;
@@ -460,6 +483,7 @@ a {
   border: var(--borda-escura);
   border-radius: var(--borda-redondinha);
 }
+
 #baralho-texto {
   justify-self: center;
   align-self: flex-end;
@@ -472,6 +496,7 @@ a {
   grid-column: 5 / 6;
   grid-row: 3 / 4;
 }
+
 #falas {
   justify-self: center;
   align-self: flex-end;
@@ -484,6 +509,7 @@ a {
   grid-column: 4 / 5;
   grid-row: 1 / 2;
 }
+
 #info-card {
   justify-self: center;
   align-self: flex-end;
@@ -500,20 +526,22 @@ a {
   padding: 5px 5px;
   border-radius: var(--borda-redondinha);
 }
+
 .hide {
   display: none;
 }
+
 #baralho-area:hover {
   cursor: pointer;
 }
+
+
 #player-deck {
   grid-column: 2 / 5;
   grid-row: 4 / 5;
-  background: radial-gradient(
-    circle,
-    rgba(13, 13, 13, 1) 0%,
-    rgba(68, 63, 63, 1) 100%
-  );
+  background: radial-gradient(circle,
+      rgba(13, 13, 13, 1) 0%,
+      rgba(68, 63, 63, 1) 100%);
   padding: 2vh;
   border: 1vh rgb(0, 0, 0) ridge;
   border-radius: var(--borda-redondinha);
@@ -523,27 +551,25 @@ a {
   height: 24vh;
   box-sizing: border-box;
 }
+
 .slotabble {
-  background: radial-gradient(
-    circle,
-    rgba(185, 186, 19, 1) 0%,
-    rgba(50, 148, 134, 1) 100%
-  );
+  background: radial-gradient(circle,
+      rgba(185, 186, 19, 1) 0%,
+      rgba(50, 148, 134, 1) 100%);
 }
+
 #area-inimigo div {
-  background: radial-gradient(
-    circle,
-    rgba(185, 186, 19, 1) 0%,
-    rgba(50, 148, 134, 1) 100%
-  );
+  background: radial-gradient(circle,
+      rgba(185, 186, 19, 1) 0%,
+      rgba(50, 148, 134, 1) 100%);
 }
+
 .ocupado {
-  background: radial-gradient(
-    circle,
-    rgba(185, 186, 19, 1) 0%,
-    rgba(50, 148, 134, 1) 100%
-  );
+  background: radial-gradient(circle,
+      rgba(185, 186, 19, 1) 0%,
+      rgba(50, 148, 134, 1) 100%);
 }
+
 #oponente-obj {
   grid-column: 2 / 5;
   grid-row: 1 / 2;
@@ -551,84 +577,90 @@ a {
   width: 12.5vh;
   height: 12.5vh;
 }
+
 .drag:active {
   width: 24.54vh;
   height: 34.7vh;
 }
+
 .drag {
   cursor: pointer;
   width: 16.36vh;
   height: 23.13vh;
 }
+
 #arena div:not(#player-deck) img {
   width: 20vh;
   height: 22vh;
 }
+
 #area-inimigo {
   grid-column: 2 / 5;
   grid-row: 2 / 3;
   display: flex;
   align-items: center;
   justify-content: space-around;
-  background: radial-gradient(
-    circle,
-    rgba(156, 23, 121, 1) 0%,
-    rgba(28, 12, 27, 1) 100%
-  );
+  background: radial-gradient(circle,
+      rgba(156, 23, 121, 1) 0%,
+      rgba(28, 12, 27, 1) 100%);
   width: 144vh;
   border: var(--borda-escura);
   border-radius: var(--borda-redondinha);
 }
+
 #area-aliado {
   grid-column: 2 / 5;
   grid-row: 3 / 4;
   display: flex;
   align-items: center;
   justify-content: space-around;
-  background: radial-gradient(
-    circle,
-    rgba(23, 59, 156, 1) 0%,
-    rgba(28, 12, 27, 1) 100%
-  );
+  background: radial-gradient(circle,
+      rgba(23, 59, 156, 1) 0%,
+      rgba(28, 12, 27, 1) 100%);
   width: 144vh;
   border: var(--borda-escura);
   border-radius: var(--borda-redondinha);
 }
+
 #slot1 {
   border: var(--borda-escura);
   border-radius: var(--borda-redondinha);
 }
+
 #slot2 {
   border: var(--borda-escura);
   border-radius: var(--borda-redondinha);
 }
+
 #slot3 {
   border: var(--borda-escura);
   border-radius: var(--borda-redondinha);
 }
+
 #slot4 {
   border: var(--borda-escura);
   border-radius: var(--borda-redondinha);
 }
+
 #slot5 {
   border: var(--borda-escura);
   border-radius: var(--borda-redondinha);
 }
+
 #slot6 {
   border: var(--borda-escura);
   border-radius: var(--borda-redondinha);
 }
+
 #vida-inimigo {
   grid-column: 1 / 2;
   grid-row: 1 / 2;
   border-radius: 48.9%;
   border: solid black 0.5vh;
   padding: 4.2vh 2.4vh;
-  background: radial-gradient(
-    circle,
-    rgba(255, 0, 0, 1) 0%,
-    rgb(126, 43, 43) 100%
-  );
+  background: radial-gradient(circle,
+      rgba(255, 0, 0, 1) 0%,
+      rgb(126, 43, 43) 100%);
   display: flex;
   justify-self: center;
   align-self: center;
@@ -643,11 +675,9 @@ a {
   grid-row: 3 / 4;
   border-radius: 48.9%;
   border: solid black 0.5vh;
-  background: radial-gradient(
-    circle,
-    rgb(240, 219, 127) 0%,
-    rgb(115, 217, 224) 100%
-  );
+  background: radial-gradient(circle,
+      rgb(240, 219, 127) 0%,
+      rgb(115, 217, 224) 100%);
   padding: 4.2vh 2.4vh;
   display: flex;
   justify-self: center;
@@ -664,11 +694,9 @@ a {
   border-radius: 48.9%;
   border: solid black 0.5vh;
   padding: 4.2vh 2.4vh;
-  background: radial-gradient(
-    circle,
-    rgba(255, 0, 0, 1) 0%,
-    rgb(126, 43, 43) 100%
-  );
+  background: radial-gradient(circle,
+      rgba(255, 0, 0, 1) 0%,
+      rgb(126, 43, 43) 100%);
   display: flex;
   justify-self: center;
   align-self: center;
@@ -697,6 +725,7 @@ a {
   justify-self: center;
   align-self: center;
 }
+
 #aro3 {
   grid-column: 1 / 2;
   grid-row: 3 / 4;
@@ -719,6 +748,7 @@ a {
   border: var(--borda-escura);
   border-radius: var(--borda-redondinha);
 }
+
 #passa-turno:hover {
   cursor: pointer;
   transition: 800ms;
@@ -751,10 +781,12 @@ a {
   color: rgb(80, 80, 80);
   font-weight: bold;
 }
+
 .hp {
   padding: 1vh 1vh;
   float: right;
 }
+
 .dmg {
   padding: 1vh;
   float: left;
@@ -764,6 +796,7 @@ a {
   padding: 1vh;
   float: left;
 }
+
 .Imunidade {
   opacity: 0.5;
 }
@@ -775,6 +808,7 @@ a {
 .PerdendoVida {
   filter: hue-rotate(74deg);
 }
+
 .Congelado {
   filter: invert(1);
 }
@@ -782,21 +816,142 @@ a {
 .Angry {
   filter: saturate(150%);
 }
+
 .DanoAumentado {
   filter: blur(1px);
   filter: brightness(150%);
 }
+
 /* fim */
 
 /*//////////////////////////////////shop/////////////////////////////////////////////////////////*/
 
-#loja {
-  grid-template: 1fr 1fr 1fr / 1fr 1fr 1fr 1fr 1fr;
+#comprar {
+  display: grid;
+  grid-template: repeat(3, 1fr) / repeat(5, 1fr);
+  margin-left: 1vh;
+  margin-right: 1vh;
+  align-items: center;
 }
-#loja h1 {
+
+#dinheiro {
+  background-color: rgb(245, 245, 94);
+  border: var(--borda-escura);
+  border-radius: var(--borda-redondinha);
+  grid-column: 4 / 6;
   grid-row: 1 / 2;
-  grid-column: 3 / 4;
+  padding: auto;
 }
+
+#dinheiro p {
+  justify-self: center;
+  align-self: flex-end;
+  text-align: center;
+  font-size: 5vh;
+  font-weight: 200;
+  font-family: "Dancing Script", cursive;
+  color: rgb(13, 198, 223);
+  text-shadow: 2px 2px rgb(3, 3, 3);
+}
+
+#loja-cartas {
+  grid-column: 2 / 6;
+  grid-row: 2 / 4;
+  display: flex;
+  justify-content: space-around;
+  background-color: rgb(215, 247, 39);
+  border: var(--borda-escura);
+  border-radius: var(--borda-redondinha);
+}
+
+.carta-venda img {
+  width: 24.5vh;
+  height: 34.5vh;
+  padding: 10px;
+}
+
+.carta-venda img:hover {
+  cursor: pointer;
+}
+
+.carta-venda button:hover {
+  cursor: pointer;
+}
+
+.carta-venda button {
+  text-align: center;
+  font-size: 3vh;
+  font-weight: 700;
+  font-family: "Dancing Script", cursive;
+}
+
+.carta-venda {
+  background-color: rgb(59, 230, 187);
+  border-radius: var(--borda-redondinha);
+  border: var(--borda-escura);
+  display: flex;
+  flex-direction: column;
+}
+
+.imagem-loja {
+  width: 15vh;
+  height: 15vh;
+  padding: 10px;
+}
+
+#titulo-loja {
+  grid-column: 3 / 4;
+  grid-row: 1 / 2;
+  border: var(--borda-escura);
+  border-radius: var(--borda-redondinha);
+  padding: 2.5vh;
+  background-color: rgb(46, 189, 194);
+}
+
+#text-shop{
+  justify-self: center;
+  align-self: flex-end;
+  text-align: center;
+  font-size: 5vh;
+  font-weight: 200;
+  font-family: "Dancing Script", cursive;
+  color: rgb(13, 198, 223);
+  text-shadow: 2px 2px rgb(3, 3, 3);
+}
+
+#carrinho {
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
+  background-color: rgb(21, 165, 98);
+  border: var(--borda-escura);
+}
+
+#reciclar {
+  grid-column: 1 / 2;
+  grid-row: 3 / 4;
+  border-radius: 50%;
+  border: var(--borda-escura);
+  background-color: aquamarine;
+}
+
+#reciclar:hover {
+  cursor: pointer;
+  transition: 500ms;
+  border: 1vh ridge rgb(163, 165, 163);
+  transform: rotate(180deg);
+}
+
+.girar {
+  transform: rotateY(360deg);
+  transition: 500ms;
+}
+
+#reciclar:active {
+  cursor: pointer;
+  transition: 300ms;
+  transform: rotate(720deg);
+}
+
 .voltar {
   top: 0.5vh;
   left: 0.5vh;
@@ -804,9 +959,23 @@ a {
   width: 13vh;
   position: absolute;
 }
+
 .voltar a {
   height: 100%;
   width: 100%;
+}
+
+.trancado img{
+  filter: invert(45%);
+  transition: 200ms;
+}
+.trancado {
+  border: 1vh ridge whitesmoke;
+  transition: 200ms;
+}
+.botao-trancar{
+  color: rgb(0, 81, 255);
+  text-shadow: black 1px 1px;
 }
 @media screen and (orientation: portrait) {
   body {
